e2e-tests/kubernetes/infra/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-service
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: cassandra-service
  ports:
  - name: cassandra-service-port
    protocol: TCP
    port: 9042
    targetPort: 9042
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cqrs-cassandra-service
  labels:
    app: kafka-cqrs
    service: cassandra-service
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: cassandra-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: cassandra-service
    spec:
      containers:
      - name: kafka-service
        image: library/cassandra:3.11.3
        ports:
          - containerPort: 9042
        readinessProbe:
          tcpSocket:
            port: 9042
          initialDelaySeconds: 1
          periodSeconds: 1
