e2e-tests/kubernetes/infra/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: kafka-service
  ports:
  - name: kafka-service-port
    protocol: TCP
    port: 9092
    targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cqrs-kafka-service
  labels:
    app: kafka-cqrs
    service: kafka-service
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: kafka-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: kafka-service
    spec:
      containers:
      - name: kafka-service
        image: bitnami/kafka:2.5.0-debian-10-r78
        ports:
          - containerPort: 9092
