e2e-tests/kubernetes/infra/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: zookeeper-service
  ports:
  - name: zookeeper-service-port
    protocol: TCP
    port: 2181
    targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cqrs-zookeeper-service
  labels:
    app: kafka-cqrs
    service: zookeeper-service
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: zookeeper-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: zookeeper-service
    spec:
      containers:
      - name: zookeeper-service
#        image: jplock/zookeeper:3.4.13
        image: bitnami/zookeeper:3.4.12
        ports:
          - containerPort: 2181
